--- a/src/app/login-options/login-options.component.html
+++ b/src/app/login-options/login-options.component.html
@@ -1,6 +1,6 @@
 
 <router-outlet></router-outlet>
-
+<div style="background-color:rgb(221, 227, 238 ); padding-bottom: 2cm;">
 <nav class="navbar fixed-bottom justify-content-center navbar-light ">
   <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center">
@@ -12,4 +12,16 @@
       
     </ul>
   </nav>
-</nav>
+</nav> </div>
+<!-- <div style="background-color:rgb(221, 227, 238 ); padding-bottom: 2cm;">
+  <nav class="navbar Top justify-content-center navbar-light " >
+    <nav aria-label="Page navigation example">
+      <ul class="pagination justify-content-center">
+        
+        <li class="page-item"><a class="page-link" routerLink="StudentLogin">Student Login</a></li>
+        <li class="page-item"><a class="page-link" routerLink="InstituteLogin" >Institute Login</a></li>
+        <li class="page-item"><a class="page-link" routerLink="StateNodalOfficerLogin">State Login</a></li>
+        <li class="page-item"><a class="page-link" routerLink="MinistryLogin">Ministry Login</a></li>
+      </ul>
+    </nav></nav>
+    <router-outlet></router-outlet></div> -->
