--- a/src/app/ministry-home-page/ministry-home-page.component.html
+++ b/src/app/ministry-home-page/ministry-home-page.component.html
@@ -1,1 +1,22 @@
-<img src="/assets/nsp11.jpg" style="width: 100%;">
+
+<div class="container-fluid">
+    <div class="row">
+    
+      <div class="Hero Parallax aa-contact-us-page-hero-image col-xs-12">
+        <h2>Ministry Home</h2> 
+        <div class="row">
+          <div class="col-xs-6 col-xs-offset-3 col text-container">
+           
+            <h3>"Government is not reason; it is not eloquence; it is force! Like fire, it is a dangerous servant and a fearful master."</h3>
+          </div>
+        </div>
+<div class="container aa-contact-us-page-address">
+    <div class="row">
+      <div class="col-xs-12">
+       
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
