--- a/src/app/new-registration-options/new-registration-options.component.html
+++ b/src/app/new-registration-options/new-registration-options.component.html
@@ -16,8 +16,8 @@
   
   <router-outlet></router-outlet> -->
   
-
-<nav class="navbar Top justify-content-center navbar-light ">
+<div style="background-color:rgb(221, 227, 238 ); padding-bottom: 2cm;">
+<nav class="navbar Top justify-content-center navbar-light " >
   <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center">
       
@@ -25,4 +25,4 @@
       <li class="page-item"><a class="page-link" routerLink="InstituteRegistration" >Institute Register</a></li>
     </ul>
   </nav></nav>
-  <router-outlet></router-outlet>
+  <router-outlet></router-outlet></div>
