--- a/src/app/scheme1/scheme1.component.html
+++ b/src/app/scheme1/scheme1.component.html
@@ -1,34 +1,23 @@
 
-<html>
-<head></head>
-<style>
- #div1{
-      /* text-align: center; */
-margin-left: auto;
-margin-right: auto;
-width:60%;
-border:  3px solid green;
-padding: 10px;
-line-height: 1.2;
-  }  
-  
-</style>
-<body style="background-color:bisque;">
+
+
+<body style="background-color:rgb(229, 229, 247);">
     
-    <h3 style="color: maroon; text-align: center;">POST MATRIC SCHOLARSHIP</h3>
+    <h2 style="color:rgb(14, 77, 133); text-align: center; padding-top:2cm ;padding-bottom: 1cm;"> MATRIC SCHOLARSHIP</h2>
   <div id="div1">
-    <h3>Objective:</h3>
+    <h3 style="color: red;text-align: center;padding-bottom: 0.5cm;" >Objective</h3>
     <p style="text-align:left;">The  Maharashtra  DTE Scholarship  gives  the  opportunity  to  the  students belonging to the backwards categories to study in the government and private colleges after completion of their Class 12th. This scheme not only provides the scholarship to study in technical courses,
          but also gives the chance to apply for undergraduate and postgraduate courses in India</p>
          <br>
- <h3>Eligibility Criteria </h3>
+ <h3 style="color: red;text-align: center;padding-bottom: 0.5cm;">Eligibility Criteria </h3>
  <p>Those  applicants  who  are  belonging  to  the  economically  backward caste/category such as SC/ ST/ OBC or other minorities’ categories are required to check if they come under the eligibility criteria provided by the Directorate of Technical education, Maharashtra Government.<br>
     • The candidates applying for the Maharashtra Merit Scheme Scholarship 2021-2022 must have completed 10th and 12th from a recognized board with a minimum of 60% marks in aggregate.<br>
     •          Maximum two members of a family belonging to the minority category can apply for the scholarship.<br>
     •          Students applying for the Maharashtra Merit scheme Scholarship 2021- 2022 must have Aadhaar Card enrolled in the State.<br>
     •          The applicant must produce all the documents prescribed by the state.<br>
 </p>
-</div>
-<br>
-<div style="text-align: center;">
+
+
+</div><br><br><br>
+
    
