--- a/src/app/scheme2/scheme2.component.html
+++ b/src/app/scheme2/scheme2.component.html
@@ -1,23 +1,18 @@
 
-<html>
-<head></head>
-<style>
-  #p1{
-      /* text-align: center; */
-margin-left: auto;
-margin-right: auto;
-width:60%;
-border:  3px solid green;
-padding: 10px;
-line-height: 1.8;
-  }  
-</style>
-<body style="background-color:bisque;">
-   
-    <h3 style="color: maroon; text-align: center;">PRAGATI SCHOLARSHIP</h3>
-    <p id="p1">‘One Girl’ per family and it can be extended for Two Girl Child per family where the family income is less than Rs. 8 Lakh /annum (In case of married girl child, the income of parents/ in laws whichever is higher is to be considered).
-        • The selection of candidate will be made on merit based on qualifying examination to peruse the respective Technical Degree/Diploma course from any of the AICTE approved institution. Amount of scholarship: Tuition Fee of Rs. 30,000/-</p>
+<body style="background-color:rgb(229, 229, 247);">
+    
+  <h2 style="color:rgb(14, 77, 133); text-align: center; padding-top:2cm ;padding-bottom: 1cm;"> PRAGATI SCHOLARSHIP</h2>
+<div id="div1">
+  <h3 style="color: red;text-align: center;padding-bottom: 0.5cm;" >Objective</h3>
+  <p style="text-align:left;">The  Maharashtra  DTE Scholarship  gives  the  opportunity  to  the  students belonging to the backwards categories to study in the government and private colleges after completion of their Class 12th. This scheme not only provides the scholarship to study in technical courses,
+       but also gives the chance to apply for undergraduate and postgraduate courses in India</p>
+       <br>
+<h3 style="color: red;text-align: center;padding-bottom: 0.5cm;">Eligibility Criteria </h3>
+<p>‘One Girl’ per family and it can be extended for Two Girl Child per family where the family income is less than Rs. 8 Lakh /annum (In case of married girl child, the income of parents/ in laws whichever is higher is to be considered).
+  • The selection of candidate will be made on merit based on qualifying examination to peruse the respective Technical Degree/Diploma course from any of the AICTE approved institution. Amount of scholarship: Tuition Fee of Rs. 30,000/-
+</p>
 
-    </body>
-</html>
-<router-outlet></router-outlet>
+
+</div><br><br><br>
+
+ 
