--- a/src/app/scheme3/scheme3.component.html
+++ b/src/app/scheme3/scheme3.component.html
@@ -1,32 +1,16 @@
 
-<html>
-<head></head>
-<style>
- #div1{
-      /* text-align: center; */
-margin-left: auto;
-margin-right: auto;
-width:60%;
-border:  3px solid green;
-padding: 10px;
-line-height: 1.2;
-  }  
-  
-</style>
-<body style="background-color:bisque;">
+
+<body style="background-color:rgb(229, 229, 247);">
     
-    <h3 style="color: maroon; text-align: center;">MERIT BASED SCHOLARSHIP</h3>
-  <div id="div1">
-    <h3>NTSE (National Talent Search Examination)</h3>
-    <h2>Eligibility Criteria </h2>
- <p>•          Candidates must be an Indian national.<br>
-    •          A minimum of 60% marks Class IX is required. SC, ST and PH candidates will need 55% marks in Class IX.<br>
-    •          Candidate must be studying in a recognized school in their respective State <br>
+  <h2 style="color:rgb(14, 77, 133); text-align: center; padding-top:2cm ;padding-bottom: 1cm;"> MERIT BASED SCHOLARSHIP</h2>
+<div id="div1">
+  <h3 style="color: red;text-align: center;padding-bottom: 0.5cm;" >Objective</h3>
+  <p style="text-align:left;">The  Maharashtra  DTE Scholarship  gives  the  opportunity  to  the  students belonging to the backwards categories to study in the government and private colleges after completion of their Class 12th. This scheme not only provides the scholarship to study in technical courses,
+       but also gives the chance to apply for undergraduate and postgraduate courses in India</p>
+       <br>
+<h3 style="color: red;text-align: center;padding-bottom: 0.5cm;">Eligibility Criteria </h3>
+<p>•          Candidates must be an Indian national.<br>
+  •          A minimum of 60% marks Class IX is required. SC, ST and PH candidates will need 55% marks in Class IX.<br>
+  •          Candidate must be studying in a recognized school in their respective State <br>
 </p>
-</div>
-<br>
-
-
-    </body>
-</html>
-<router-outlet></router-outlet>
+</div><br><br><br>
