--- a/src/app/state-home-page/state-home-page.component.html
+++ b/src/app/state-home-page/state-home-page.component.html
@@ -1,1 +1,21 @@
-<img src="/assets/lib2.jpg" style="width: 100%;">
+<div class="container-fluid">
+    <div class="row">
+    
+      <div class="Hero Parallax aa-contact-us-page-hero-image col-xs-12">
+        <h2>State Home</h2> 
+        <div class="row">
+          <div class="col-xs-6 col-xs-offset-3 col text-container">
+           
+            <h3>“The function of education is to teach one to think intensively and to think critically. Intelligence plus character – that is the goal of true education.”</h3>
+          </div>
+        </div>
+<div class="container aa-contact-us-page-address">
+    <div class="row">
+      <div class="col-xs-12">
+       
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
