--- a/src/app/student-home/student-home.component.html
+++ b/src/app/student-home/student-home.component.html
@@ -19,13 +19,13 @@
                <br>  National Scholarships Portal is taken as Mission Mode Project under National e-Governance Plan (NeGP). 
          <br> <br><i>Currently, the NSP has 3 departments and 3 registered schemes.</i></p><br><br>
 
-         <a href="StudentHomePage/Scheme1" style="color:rgb(228, 29, 29);font-style: oblique;"><h3><b>Post Matric Scholarship</b></h3></a>
+         <a routerLink="Scheme1" style="color:rgb(228, 29, 29);font-style: oblique;"><h3><b>Post Matric Scholarship</b></h3></a>
          <br>
          
-         <a href="StudentHomePage/Scheme2" style="color:rgb(228, 29, 29);font-style: oblique;"><h3><b>Pragati Scholarship</b></h3></a>
+         <a routerLink="Scheme2" style="color:rgb(228, 29, 29);font-style: oblique;"><h3><b>Pragati Scholarship</b></h3></a>
          <br>
          
-         <a href="StudentHomePage/Scheme3"style="color:rgb(228, 29, 29);font-style: oblique;"><h3><b>Merit Based Scholarship</b></h3></a>
+         <a routerLink="Scheme3"style="color:rgb(228, 29, 29);font-style: oblique;"><h3><b>Merit Based Scholarship</b></h3></a>
 
             </div>
           </div>
