--- a/src/app/institute-home/institute-home.component.html
+++ b/src/app/institute-home/institute-home.component.html
@@ -1,1 +1,23 @@
-<img src="/assets/lib.jpg" style="width: 100%;">
+<!-- <img src="/assets/lib.jpg" style="width: 100%; height: 583px;"> -->
+<!-- <div class="background"></div> -->
+<div class="container-fluid">
+    <div class="row">
+    
+      <div class="Hero Parallax aa-contact-us-page-hero-image col-xs-12">
+        <h2>Institute Home</h2> 
+        <div class="row">
+          <div class="col-xs-6 col-xs-offset-3 col text-container">
+           
+            <h3>"People who succeed have momentum. The more they succeed, the more they want to succeed, and the more they find a way to succeed. Similarly, when someone is failing, the tendency is to get on a downward spiral that can even become a self-fulfilling prophecy."</h3>
+          </div>
+        </div>
+<div class="container aa-contact-us-page-address">
+    <div class="row">
+      <div class="col-xs-12">
+       
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
