--- a/src/app/scholarship/scholarship.component.css
+++ b/src/app/scholarship/scholarship.component.css
@@ -1,56 +1,96 @@
 .login{
-    width: 50%;
-    margin:16px auto;
-    font-size: 16px;
-    
-  }
-  .login-header,login p{
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-  .login-header{
-    background: rgb(12, 77, 129);
-    padding: 10px;
-    font-size: 1.4em;
-    font-weight: normal;
-    text-align: center;
-    text-transform: uppercase;
-    color: cornflowerblue;
-  }
-  .login-container {
-    background: #ebebeb;
-    padding: 5px;
-    color: black;
-  }
+  width: 50%;
+  margin:16px auto;
+  font-size: 16px;
   
-  .login p {
-    padding: 5px;
-  }
+}
+.login-header,login p{
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.login-header{
+  background: rgb(12, 77, 129);
+  padding: 10px;
+  padding-top: 0.5cm;
+  font-size: 1.4em;
+  height: 2cm;
+  font-weight: normal;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: rgb(221, 227, 238);
+  border-top-left-radius: 1cm;
+  border-top-right-radius: 1cm;
   
-  .login input {
-    box-sizing: border-box;
-    display: block;
-    width: 100%;
-    border-width: 1px;
-    border-style: solid;
-    padding: 5px;
-    outline: 0;
-    font-family: inherit;
-    font-size: 0.95em;
-  }
+}
+.login-container {
+  background-color:peachpuff;
+  padding: 5px;
+  color: black;
+  border-bottom-left-radius: 1cm;
+  border-bottom-right-radius: 1cm;
+
+}
+
+.login p {
+  padding: 5px;
+  text-align: center;
+  font-weight: 500;
+  font-size:large;
+}
+
+.login input {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  border-width: 1px;
+  border-style: solid;
+  padding: 5px;
+  outline: 0;
+  height: 1cm;
+  font-family: inherit;
+  font-size: 0.95em;
+  text-align: center;
+  
+  border-radius: 1cm;
+}
+.login select {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  border-width: 1px;
+  border-style: solid;
+  padding: 5px;
+  outline: 0;
+  height: 1cm;
+  font-family: inherit;
+  font-size: 0.95em;
+  text-align: center;
+  
+  border-radius: 1cm;
+}
+
+.login input [type="submit"] {
+  background: lightslategrey;
+  border-color: transparent;
+  color: #fff;
+  cursor: pointer;
   
   
-  .login input [type="submit"] {
-    background: lightslategrey;
-    border-color: transparent;
-    color: #fff;
-    cursor: pointer;
-  }
   
-  .login input[type="submit"]:hover {
-    background: #17c;
-  }
+}
+
+
+.login input[type="submit"]:hover {
+  background: #17c;
+  font-weight: 600;
+}
+
+.login input[type="reset"]:hover {
+  background: lightslategrey;
+  border-color: transparent;
+  color: #fff;
+  cursor: pointer;
   
-  .login input[type="reset"]:focus {
-    border-color: #05a;
-  }
+  
+}
