--- a/src/app/student-application-form-state/student-application-form-state.component.html
+++ b/src/app/student-application-form-state/student-application-form-state.component.html
@@ -1,4 +1,4 @@
-<h3 style="text-align: center;">Student List For Approval</h3><br>
+<!-- <h3 style="text-align: center;">Student List For Approval</h3><br>
 <table class="table">
     <thead>
         <tr>
@@ -35,4 +35,48 @@
             <td><button (click)="reject(list.id)">Reject</button></td>
         </tr>
     </tbody>
-</table>
+</table> -->
+<div style="background-color: rgb(229, 229, 247);">
+    <h2 style="text-align: center;padding-top: 1cm;"><i>Student List for Approval</i></h2><br>
+   
+   <table style="padding-bottom: 2cm;" >
+       <tr style="font-weight: 500; font-size: 0.5cm;">
+        
+            <th>Application Id</th>
+            <th>Student Name</th>
+            <th>DOB</th>
+            <th>Aadhar Number</th>
+            <th>Category</th>
+            <th>Course</th>
+            <th>Year</th>
+            <th>Family Income</th>
+            <th>Maritial Status</th>
+            <th>Mother's Occupation</th>
+            <th>Father's Occupation</th>
+            <th> Scholarship Applied</th>
+            <th >Approve</th>
+            <th >Reject</th>
+        </tr>
+
+        <tr *ngFor="let list of info" style="font-weight: 300;">
+            <td >{{list.id}}</td>
+            <td>{{list.name}}</td>
+            <td>{{list.dob|date:'d/M/y'}}</td>
+            <td>{{list.aadharnumber}}</td>
+            <td>{{list.category}}</td>
+            <td>{{list.currentcourse}}</td>
+            <td>{{list.currentyear}}</td>
+            <td>{{list.annualincome}}</td>
+            <td>{{list.maritialstatus}}</td>
+            <td>{{list.motheroccupation}}</td>
+            <td>{{list.fatheroccupation}}</td>  
+            <td>{{list.schlorship}}</td> 
+            <td><button (click)="approve(list.id)">Approve</button></td>
+            <td><button (click)="reject(list.id)">Reject</button></td>
+        </tr>
+    
+</table><br><br>
+<br>
+<br>
+</div>
+
