--- a/src/app/scholarship/scholarship.component.html
+++ b/src/app/scholarship/scholarship.component.html
@@ -1,6 +1,6 @@
 <div style="background-color:rgb(221, 227, 238 ); padding-bottom: 2cm; padding-top: 2cm">
 <div class="login">
-    <h2 class="login-header"> SCHOLARSHIP FORM FORM</h2>
+    <h2 class="login-header"> SCHOLARSHIP FORM</h2>
 
 <form [formGroup]="scholarshipform" class="login-container" (ngSubmit)="submitform()" style="text-align: center;">
 
