--- a/src/app/institute-application-form/institute-application-form.component.css
+++ b/src/app/institute-application-form/institute-application-form.component.css
@@ -1,18 +1,37 @@
 table{
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 50%;
+    width: 30%;
     text-align: center;
     
     margin-left: auto;
     margin-right: auto;
+   
 }
 
-td,th{
-    border: 1px solid #1b1717;
+th{
+    border: 3px solid #1b1717;
     text-align: center;
-    padding: 8px;
+    padding: 3px;
+    background-color: rgb(182, 166, 255);
 }
+td
+{  
+    border: 3px solid #1b1717;
+    text-align: center;
+    padding: 3px;
+}
+
+
 tr:nth-child(even){
     background-color: #dddddd;
 }
+button {
+    background: lightslategrey;
+    border-color: transparent;
+    color: #fff;
+    cursor: pointer;
+    
+    
+    
+  }
