--- a/src/app/login-options/login-options.component.html
+++ b/src/app/login-options/login-options.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <router-outlet></router-outlet>
 <div style="background-color:rgb(221, 227, 238 ); padding-bottom: 2cm;">
 <nav class="navbar fixed-bottom justify-content-center navbar-light ">
@@ -12,8 +12,8 @@
       
     </ul>
   </nav>
-</nav> </div>
-<!-- <div style="background-color:rgb(221, 227, 238 ); padding-bottom: 2cm;">
+</nav> </div> -->
+<div style="background-color:rgb(221, 227, 238 ); padding-bottom: 2cm;">
   <nav class="navbar Top justify-content-center navbar-light " >
     <nav aria-label="Page navigation example">
       <ul class="pagination justify-content-center">
@@ -24,4 +24,4 @@
         <li class="page-item"><a class="page-link" routerLink="MinistryLogin">Ministry Login</a></li>
       </ul>
     </nav></nav>
-    <router-outlet></router-outlet></div> -->
+    <router-outlet></router-outlet></div> 
