--- a/src/app/ministry-login/ministry-login.component.css
+++ b/src/app/ministry-login/ministry-login.component.css
@@ -8,7 +8,7 @@
       background-repeat: no-repeat;
       background-position: center;
     background-size: cover;
-    position: fixed;
+    position: absolute;
     width: 100%;
    
       
