--- a/src/app/state-nodal-officer-login/state-nodal-officer-login.component.css
+++ b/src/app/state-nodal-officer-login/state-nodal-officer-login.component.css
@@ -8,7 +8,7 @@
       background-repeat: no-repeat;
       background-position: center;
     background-size: cover;
-    position: fixed;
+    position: absolute;
     width: 100%;
    
       
